# NimBLE_Secure

./: CMakeLists.txt  esp_idf_project_configuration.json  partition_4mb_ota.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c3
main/: CMakeLists.txt  main.cpp
main/data/: config.html  index.html  ota.html
main/include/: ESP_MAIN.h  common.h  esp_main.h  gap.h  gatt.h  gatt_cts_svc.h  gatt_svc.h  heart_rate.h  http_server.h  led.h  main.h  web_server.h  wifi_api.h
main/src/: ESP_MAIN.c  gap.c  gap.cpp  gatt.c  gatt_cts_svc.c  gatt_svc.c  gatt_svc.cpp  heart_rate_mock.c  http_server.cpp  led.c  wifi_api.cpp
